--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,120 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --black: #707070;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  height: 100%;
+  width: 100%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+
+.title {
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  margin: 0 auto;
+
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+
+  border: 1px solid var(--black);
+  border-radius: 14px;
+  margin-top: 2rem;
+}
+
+.form-container {
+  padding: 0.5rem;
+}
+
+.field {
+  font-size: 1.5rem;  
+}
+
+.field i {
+  padding: 0 0.3rem;
+}
+
+.field input {
+  font-size: 1.5rem;
+  width: calc(100% - 28px - 1rem);
+  outline: 0;
+  border: 0;
+}
+
+.todo-list {
+  padding: 0 1.3rem;
+  max-height: 400px;
+}
+
+.todo-body {
+  border-top: 1px solid var(--black);
+  border-bottom: 1px solid var(--black);
+  overflow-y: auto;
+}
+
+.todo-item {
+  font-size: 1.4rem;
+  border-bottom: 1px solid var(--black);
+  padding: 8px 0;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.todo-item:hover {
+  transition: all 0.2s ease-in-out;
+  padding-left: 20px;
+  background: #c9c9c9;
+}
+
+.todo-item__check:hover {
+  cursor: pointer;
+}
+
+.todo-item.complete {
+  color: green;
+}
+
+.todo-item.complete .todo-item__text {
+  text-decoration: line-through;
+}
+
+.delete {
+  font-size: 1.5rem;
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.delete:hover {
+  color: red;
+}
+
+@media (min-width: 1024px) {
+  .container {
+    min-width: 1024px;
+  }
+
+  .todo-list {
+    padding: 0 2rem;
+  }
 }
